Correct missing background-image on button(normal)

--- a/gtk-3.0/_drawing.scss
+++ b/gtk-3.0/_drawing.scss
@@ -196,9 +196,10 @@
     outline-color: transparentize($tc, 0.7);
     border-color: if($c != $bg_color, _border_color($c), $borders_color);
     //border-bottom-color: if($c != $bg_color, _border_color($c, true), $alt_borders_color);
+    $button_fill: image($c);
     //$button_fill: if($variant == 'light', linear-gradient(to bottom, $c, darken($c, 4%) 60%, darken($c, 10%)),
-    //                                      linear-gradient(to bottom, darken($c, 2%), darken($c, 4%) 60%, darken($c, 6%))) !global;
-    //background-image: $button_fill;
+                                          //linear-gradient(to bottom, darken($c, 2%), darken($c, 4%) 60%, darken($c, 6%))) !global;
+    background-image: $button_fill;
     @include _button_text_shadow($tc, $c);
     //@include _shadows(inset 0 1px $_hilight_color, $_button_edge);
   }
@@ -214,16 +215,17 @@
     //border-bottom-color: if($c != $bg_color, _border_color($c, true), $alt_borders_color);
 
     @if $variant == 'light' {
-      $button_fill: linear-gradient(to bottom, red, $c 60%, darken($c, 4%)) !global;
-      @include _button_text_shadow($tc, lighten($c, 6%));
+      $button_fill: image(darken($c, 5%)) !global;
+      //@include _button_text_shadow($tc, lighten($c, 6%));
       //@include _shadows(inset 0 1px _button_hilight_color(lighten($c, 6%)), $_button_edge);
     }
     @else {
       $button_fill: linear-gradient(to bottom, lighten($c, 1%), darken($c, 2%) 60%, darken($c, 4%)) !global;
-      @include _button_text_shadow($tc,lighten($c, 6%));
+      //@include _button_text_shadow($tc,lighten($c, 6%));
       //@include _shadows(inset 0 1px _button_hilight_color(darken($c, 2%)), $_button_edge);
     }
-    background-image: image(darken($c, 2%));
+
+    background-image: $button_fill;
   }
 
   @if $t==normal-alt {
